<resources>
    <string name="appName">C19X</string>

    <string name="statusDescriptionNormal">I do not have a high temperature or a new continuous cough.</string>
    <string name="statusDescriptionSymptoms">I have a high temperature and/or a new continuous cough.</string>
    <string name="statusDescriptionDiagnosis">I have a confirmed diagnosis of Coronavirus (COVID-19).</string>
    <string name="contactDescriptionHealthy">No report of COVID-19 symptoms or diagnosis has been shared.</string>
    <string name="contactDescriptionInfectious">Report of COVID-19 symptoms or diagnosis has been shared.</string>
    <string name="adviceDescriptionNormal">No restriction. COVID-19 is now under control, you can safely return to your normal activities.</string>
    <string name="adviceDescriptionStayAtHome">Stay at home. Everyone must stay at home to help stop the spread of COVID-19.</string>
    <string name="adviceDescriptionSelfIsolation">Self-isolation. Do not leave your home if you have symptoms or confirmed diagnosis of COVID-19 or been in prolonged close contact with someone who does.</string>

    <string name="welcome_title">COVID-19 Tracer</string>
    <string name="welcome_subtitle">Setting up your app...</string>
    <string name="welcome_progress_id">Generating anonymous identifier</string>
    <string name="welcome_progress_beacon">Starting bluetooth location beacon</string>
    <string name="welcome_progress_data">Getting disease transmission data</string>


    <string name="health_status_title">How are you today?</string>
    <string name="health_status_option_no_symptom">I do not have a high temperature or a new continuous cough</string>
    <string name="health_status_option_has_symptom">I have a high temperature and/or a new continuous cough</string>
    <string name="health_status_option_confirmed_diagnosis">I have a confirmed diagnosis of Coronavirus (COVID-19)</string>
    <string name="health_status_dialog_title">Submit update</string>
    <string name="health_status_dialog_description">Share your status anonymously to help people who has been in close proximity in recent days? No personal information or location data is ever collected or shared.</string>
    <string name="health_status_dialog_submit_success">Status has been shared anonymously. Thank you for helping people who has been in close proximity in recent days.</string>
    <string name="health_status_dialog_failed_network">Cannot submit status update. No internet connection. Please try again later.</string>
    <string name="health_status_dialog_failed_registration">Cannot submit status update. Device has not been registered. Please reinstall app and try again. Sorry for the inconvenience.</string>


    <string name="contact_status_title">Your recent contacts</string>
    <string name="contact_status_option_no_report">Nothing reported</string>
    <string name="contact_status_option_no_report_description">No report of COVID-19 symptoms, confirmed diagnosis, or potential infection has been received from people who has been in close proximity in recent days.</string>
    <string name="contact_status_option_infectious">Infection risk</string>
    <string name="contact_status_option_infectious_description">People who has been in close proximity in recent days have self-reported COVID-19 symptoms, confirmed diagnosis, or potential infection.</string>
    <string name="contact_status_option_infectious_notification">Infection risk has been reported</string>


    <string name="adviceTitle">What you need to do</string>
    <string name="advice_status_option_no_restriction">No restriction</string>
    <string name="advice_status_option_no_restriction_description">COVID-19 is now under control, you can safely return to your normal activities.</string>
    <string name="advice_status_option_no_restriction_description_infected_contacts">COVID-19 is now under control, you can safely return to your normal activities. Although your recent contacts may be infectious, you are unlikely to be infected from the brief encounters.</string>
    <string name="advice_status_option_stay_at_home">Stay at home</string>
    <string name="advice_status_option_stay_at_home_description">Everyone must stay at home to help stop the spread of COVID-19.</string>
    <string name="advice_status_option_stay_at_home_description_infected_contacts">Everyone must stay at home to help stop the spread of COVID-19. Although your recent contacts may be infectious, you are unlikely to be infected from the brief encounters.</string>
    <string name="advice_status_option_self_isolation">Self-isolation</string>
    <string name="advice_status_option_self_isolation_description">Do not leave your home if you have symptoms or confirmed diagnosis of COVID-19 or been in prolonged close contact with someone who does.</string>
    <string name="advice_status_option_self_isolation_notification">You are advised to self-isolate</string>

    <string name="status_beacon_off">Beacon OFF</string>
    <string name="status_beacon_on">Beacon ON</string>
    <string name="status_beacon_rx">Receive only</string>
    <string name="status_beacon_tx">Transmit only</string>
    <string name="status_beacon_off_notification">Scanning stopped, switch on Bluetooth to resume</string>
    <string name="status_contact_none">No contact</string>
    <string name="status_data_update_latest">Latest data</string>
    <string name="status_data_update_download">Pending update</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>


    <string name="dialog_welcome_tryAgainLater_noConnection_title">No internet connection</string>
    <string name="dialog_welcome_tryAgainLater_noConnection_message">An internet connection is required for app setup on first use. Please try again later.</string>
    <string name="dialog_welcome_tryAgainLater_serverBusy_title">Server busy</string>
    <string name="dialog_welcome_tryAgainLater_serverBusy_message">Connection to server is required for app setup on first use. Please try again later.</string>
    <string name="dialog_welcome_hardware_bluetooth_title">Bluetooth</string>
    <string name="dialog_welcome_hardware_bluetooth_description">Bluetooth is not available on this device. This app needs Bluetooth to find other users in close proximity.</string>
    <string name="dialog_welcome_permission_bluetooth_title">Bluetooth permission</string>
    <string name="dialog_welcome_permission_bluetooth_message">Bluetooth must be enabled for this app to detect other users in close proximity. Please try again.</string>
    <string name="dialog_welcome_permission_location_title">Location permission</string>
    <string name="dialog_welcome_permission_location_message">This app does not track your location but permission is required to enable Bluetooth. Please try again.</string>
    <string name="dialog_welcome_permission_location_rationale">This app uses Bluetooth to detect other users in close proximity. It does not use GPS tracking and your location is never recorded or shared. This permission is only required to enable Bluetooth.</string>

    <string name="notification_channel_name">COVID-19 Tracer</string>
    <string name="notification_channel_description">COVID-19 Tracer notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
